---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var b : boolean\nvar r : real\n\nvar _e00 : nat := b\nvar _e01 : nat := r\n"
---
"b"@(FileId(1), 4..5) [ConstVar(Var, No)]: boolean
"r"@(FileId(1), 20..21) [ConstVar(Var, No)]: real
"_e00"@(FileId(1), 34..38) [ConstVar(Var, No)]: nat
"_e01"@(FileId(1), 54..58) [ConstVar(Var, No)]: nat
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 48..49): mismatched types
| note for (FileId(1), 48..49): this is of type `boolean`
| note for (FileId(1), 41..44): this is of type `nat`
| info: `boolean` is not assignable into `nat`
error at (FileId(1), 68..69): mismatched types
| note for (FileId(1), 68..69): this is of type `real`
| note for (FileId(1), 61..64): this is of type `nat`
| info: `real` is not assignable into `nat`
